--- a/client/bower.json
+++ b/client/bower.json
@@ -1,6 +1,8 @@
 {
-    "name": "LetMeCookForYou",
-    "dependencies": {
-        "angular": "~1.5.0"
-    }
+  "name": "LetMeCookForYou",
+  "dependencies": {
+    "angular": "~1.5.0",
+    "angular-ui-router": "^0.2.18",
+    "angular-ui-router-title": "^0.0.4"
+  }
 }
