--- a/api/composer.json
+++ b/api/composer.json
@@ -26,7 +26,12 @@
         "symfony/monolog-bundle": "^2.8",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "friendsofsymfony/rest-bundle": "^1.7",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "stof/doctrine-extensions-bundle": "^1.2@dev",
+        "jms/serializer-bundle": "^1.0",
+        "lexik/jwt-authentication-bundle": "2.0.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
