--- a/api/app/config/config.yml
+++ b/api/app/config/config.yml
@@ -67,3 +67,41 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+sensio_framework_extra:
+    view:    { annotations: false }
+    request: { converters: true }
+
+fos_rest:
+    routing_loader:
+        default_format: 'json'
+    param_fetcher_listener: force
+    body_listener: true
+    format_listener: true
+    body_converter:
+        enabled: force
+    view:
+        view_response_listener: force
+
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: AppBundle\Entity\User
+
+lexik_jwt_authentication:
+    private_key_path: %jwt_private_key_path%
+    public_key_path:  %jwt_public_key_path%
+    pass_phrase:      %jwt_key_pass_phrase%
+    token_ttl:        %jwt_token_ttl%
+
+stof_doctrine_extensions:
+    default_locale: en_US
+    orm:
+        default:
+            timestampable: true
+            softdeleteable: true
+
+jms_serializer:
+    metadata:
+        directories:
+            - { path: %kernel.root_dir%/Resources/FOSUserBundle/serializer, namespace_prefix: 'FOS\UserBundle' }
