--- a/client/bower.json
+++ b/client/bower.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "angular": "~1.5.0",
     "angular-ui-router": "^0.2.18",
-    "angular-ui-router-title": "^0.0.4"
+    "angular-ui-router-title": "^0.0.4",
+    "jquery": "^2.2.0",
+    "bootstrap": "^3.3.6"
   }
 }
