Added bundle for handling image uploads and bundle for data fixtures, together with initial config and directory structure.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /api/web/bundles/
 /client/app/components
 /.idea/
+/api/web/uploads/event
+!api/web/uploads/event/.gitkeep
+/api/web/uploads/profile
+!api/web/uploads/profile/.gitkeep
