--- a/api/composer.json
+++ b/api/composer.json
@@ -31,7 +31,9 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "stof/doctrine-extensions-bundle": "^1.2@dev",
         "jms/serializer-bundle": "^1.0",
-        "lexik/jwt-authentication-bundle": "2.0.*@dev"
+        "lexik/jwt-authentication-bundle": "2.0.*@dev",
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
+        "knplabs/knp-gaufrette-bundle": "^0.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
