Getters and setters for entities. Small fixes related to entities. Started working on controllers/API calls

--- a/api/app/config/routing.yml
+++ b/api/app/config/routing.yml
@@ -1,6 +1,7 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+    defaults: { _format: "json" }
 
 api_login_check:
     path: /login
