Added restangular and geocoding bundle

--- a/client/bower.json
+++ b/client/bower.json
@@ -5,6 +5,7 @@
     "angular-ui-router": "^0.2.18",
     "angular-ui-router-title": "^0.0.4",
     "jquery": "^2.2.0",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "restangular": "~1.5.2"
   }
 }
