--- a/api/composer.json
+++ b/api/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "ptor/let-me-cook-for-you",
+    "minimum-stability": "dev",
     "license": "proprietary",
     "type": "project",
     "autoload": {
@@ -33,7 +34,8 @@
         "jms/serializer-bundle": "^1.0",
         "lexik/jwt-authentication-bundle": "2.0.*@dev",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
-        "knplabs/knp-gaufrette-bundle": "^0.3"
+        "knplabs/knp-gaufrette-bundle": "^0.3",
+        "dsyph3r/google-geolocation-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
