--- a/api/app/config/security.yml
+++ b/api/app/config/security.yml
@@ -15,6 +15,12 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        api_anonymous:
+            pattern: ^/events$
+            methods: [GET]
+            stateless: true
+            anonymous: true
+
         login:
             pattern:  ^/login
             stateless: true
