Fixed creating event and event details call

--- a/api/app/config/security.yml
+++ b/api/app/config/security.yml
@@ -16,7 +16,7 @@ security:
             security: false
 
         api_anonymous:
-            pattern: ^/events$
+            pattern: ^/events(/\d+)?$
             methods: [GET]
             stateless: true
             anonymous: true
