Added search API calls

--- a/api/app/config/security.yml
+++ b/api/app/config/security.yml
@@ -16,7 +16,7 @@ security:
             security: false
 
         api_anonymous:
-            pattern: ^/events(/\d+)?$
+            pattern: ^/events(/\d+|/search)?$
             methods: [GET]
             stateless: true
             anonymous: true
