--- a/api/composer.json
+++ b/api/composer.json
@@ -35,7 +35,8 @@
         "lexik/jwt-authentication-bundle": "2.0.*@dev",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "knplabs/knp-gaufrette-bundle": "^0.3",
-        "dsyph3r/google-geolocation-bundle": "dev-master"
+        "dsyph3r/google-geolocation-bundle": "dev-master",
+        "ramsey/uuid": "~3.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
